--- a/superedittextlib/src/main/AndroidManifest.xml
+++ b/superedittextlib/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.xiaoa.superedittext" />
+    package="com.cfpl.superedittext" />
